Remove the server archives and their bin/ngb-server launcher
Deletes the JRE-bundled distributions (bundleLinux, bundleWindows, the
Temurin download and checksum verification, the start-script patching)
and the plain zip/tar distributions that wrapped the jar with a
generated launcher.

None of the four archives was reachable: zip/tar were never wired into
assemble, build.sh builds neither pair, publish.sh only uploads what
lands in dist/, and the docker image runs `java -jar` directly. The
bundles had not been buildable since Oracle withdrew the JRE 8 download
they used in 2019; the CI job that built them went in 45479904.

Keeping them was not free. Boot 3.2 relocated JarLauncher, which forced
a fix to springBootlauncherClass in code nothing could run and nothing
would have caught if it were wrong - a tax due again at every Boot
upgrade.

With the launcher goes the `application` plugin, whose only purpose here
was generating it, and the de.undercouch.download plugin, whose only
users were the two JRE downloads. The distTar/distZip `enabled = false`
workarounds go too: they existed only to keep the application plugin
from adding archives to assemble.

catgenome.jar is unchanged - Start-Class is still
com.epam.catgenome.app.Application, because mainClass had been set on
the startScripts task rather than on the application extension, so Boot
was already resolving it by scanning. Verified by rebuilding and
starting the jar: /restapi/version answers 200 with no restricted-method
warnings.

server/ngb-cli keeps its own startScripts; that launcher ships in
ngb-cli.tar.gz, which is published.

Documentation follows: installation now lists two options rather than
three, the --enable-native-access=ALL-UNNAMED note credits only the
docker image and the .devenv entrypoint, and the 3.0.0 release notes
record the removal in the Removed table.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>